Updated Swagger specification
